--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+
+@media(min-width: 992px){
+    .custom-navbar .custom-navbar-nav li{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+}
+
+@media(min-width: 768px){
+    .custom-navbar .custom-navbar-nav li a:hover:before{
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 8px;
+        right: 8px;
+        background: #f9bf29;
+        height: 5px;
+        opacity: 1;
+        visibility: visible;
+        transition: .15s all ease-out;
+    }
+}
+
+
+@media(min-width: 992px){
+    .hero{
+        padding: calc(8rem - 30px) 0 8rem 0;
+    }
+}
+
+@media(min-width: 768px){
+    .hero{
+        padding: calc(4rem - 30px) 0 4rem 0;
+    }
+}
+
+
+@media(min-width: 992px){
+    .hero .intro-excerpt{
+        max-width: 450px;
+    }
+}
+
+
+@media(min-width: 1400){
+    .hero h1{
+        font-size: 54px;
+    }
+}
+
+@media(min-width: 1200px){
+    .hero .hero-img-wrap img{
+        left: 0px;
+        top: -80px;
+        right: -100px;
+    }
+}
+
+@media(min-width: 992px){
+    .hero .hero-img-wrap img{
+        left: 0px;
+        top: 80px;
+        position: absolute;
+        right: 50px;
+    }
+}
+
+@media(min-width: 768px){
+    .hero .hero-img-wrap img{
+        right: 0px;
+        left: -100px;
+    }
+}
+
+
 body{
     font-family: "inter", sans-serif;
     font-weight: 400;
@@ -13,9 +88,10 @@ body{
 }
 
 .custom-navbar{
-    background-color: #3b5d50 !important;
+    background: #3b5d50 !important;
     padding-top: 20px;
     padding-bottom: 20px;
+
 }
 
 .custom-navbar .navbar-brand{
@@ -23,14 +99,106 @@ body{
     font-weight: 600;
 }
 
+.navbar-brand .navbar-dark{
+    color: #fff;
+}
+
 .navbar-brand{
-    padding: .3125rem;
+    padding-top: .3125rem;
     padding-bottom: .3125rem;
     margin-right: 1rem;
+    font-size: 1.25rem;
     text-decoration: none;
     white-space: nowrap;
 }
 
+.custom-navbar .navbar-brand > span{
+    opacity: .4;
+}
+
 .custom-navbar .navbar-toggler{
     border-color: transparent;
+}
+
+.custom-navbar .custom-navbar-nav li.active a {
+    opacity: 1;
+}
+
+.custom-navbar .custom-navbar-nav li.active a::before{
+    width: calc(100% - 16px);
+}
+
+.custom-navbar .custom-navbar-nav li a{
+    font-weight: 500;
+    color: #FFFFFF !important;
+    opacity: .5;
+    position: relative;
+}
+
+.hero{
+    background-color: #3b5d50;
+    padding: calc(4rem - 30px) 0 0rem 0;
+}
+
+.hero .intro-excerpt{
+    position: relative;
+    z-index: 4;
+}
+
+.hero h1{
+    font-weight: 700;
+    color: #FFFFFF;
+    margin-bottom: 30px;
+}
+
+.hero p{
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.btn.btn-secondary{
+    color: #2f2f2f;
+    background: #f9bf29;
+    border-color: #f9bf29;
+    border-radius: 30px;
+    font-weight: 600;
+    padding: 12px 30px;
+}
+
+.btn.btn-secondary:hover{
+    background: #f9bf29;
+}
+
+
+/* .btn{
+    font-weight: 600;
+    padding: 12px 30px;
+    border-radius: 30px;
+    color: #FFFFFF;
+} */
+
+.btn.btn-white-outline{
+    font-weight: 600;
+    background: transparent;
+    color: #FFFFFF;
+    border-radius: 30px;
+    border-color: rgba(255, 255, 255, 0.3);
+    padding: 12px 30px;
+}
+
+.btn.btn-white-outline:hover{
+    border-color: #FFFFFF;
+}
+
+
+.hero .hero-img-wrap{
+    position: relative;
+}
+
+.hero .hero-img-wrap img{
+    position: relative;
+    top: 0px;
+    right: 0px;
+    z-index: 2;
+    max-width: 780px;
+    left: -20px;
 }
