--- a/css/style.css
+++ b/css/style.css
@@ -96,12 +96,21 @@ p {
     unicode-bidi: isolate;
 }
 
+a {
+    text-decoration: none;
+    transition: .3s all ease;
+    color: #2f2f2f;
+    text-decoration: underline;
+}
+
 .custom-navbar{
     background: #3b5d50 !important;
     padding-top: 20px;
     padding-bottom: 20px;
 
 }
+
+
 
 .custom-navbar .navbar-brand{
     font-size: 32px;
@@ -530,4 +539,235 @@ p {
     border-radius: 50%;
     transition: .3s all ease;
     background-color: #d6d6d6;
+}
+
+.blog-section {
+    padding: 7rem 0 12rem 0;
+}
+
+.blog-section .post-entry .post-thumbnail {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.blog-section .post-entry a {
+    text-decoration: none;
+}
+
+.blog-section .post-entry .post-content-entry {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.blog-section .post-entry .post-thumbnail img {
+    border-radius: 20px;
+    transition: .3s all ease;
+}
+
+.blog-section .post-entry .post-content-entry h3 {
+    font-size: 16px;
+    margin-bottom: 0;
+    font-weight: 600;
+    margin-bottom: 7px;
+}
+
+.blog-section .post-entry a {
+    text-decoration: none;
+    color: #2f2f2f;
+}
+
+span > a{
+    color: #151515;
+}
+
+a.more {
+    font-weight: 600;
+    color: #2f2f2f;
+}
+
+
+.footer-section {
+    padding: 80px 0;
+    background: #ffffff;
+}
+
+.footer-section .relative {
+    position: relative;
+}
+
+.footer-section .sofa-img {
+    position: absolute;
+    top: -200px;
+    z-index: 1;
+    right: 0;
+}
+
+.footer-section .sofa-img img {
+    max-width: 380px;
+}
+
+.footer-section .subscription-form {
+    margin-bottom: 40px;
+    position: relative;
+    z-index: 2;
+    margin-top: 100px;
+}
+
+.footer-section .subscription-form h3 {
+    font-size: 18px;
+    font-weight: 500;
+    color: #3b5d50;
+}
+
+.footer-section .subscription-form .form-control {
+    height: 50px;
+    border-radius: 10px;
+    font-family: "Inter", sans-serif;
+}
+
+.footer-section .subscription-form .btn {
+    border-radius: 10px !important;
+}
+
+.btn.btn-primary {
+    background: #3b5d50;
+    border-color: #3b5d50;
+}
+
+.btn.btn-primary:hover{
+    background: #4d7d6a;
+    border-color: #4d7d6a;
+}
+.blog-section .post-entry .post-content-entry .meta {
+    font-size: 14px;
+}
+
+.footer-section .footer-logo-wrap .footer-logo {
+    font-size: 32px;
+    font-weight: 500;
+    text-decoration: none;
+    color: #3b5d50;
+}
+
+.footer-section .custom-social li {
+    margin: 2px;
+    display: inline-block;
+}
+
+.footer-section .custom-social li a {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    display: inline-block;
+    background: #dce5e4;
+    color: #3b5d50;
+    border-radius: 50%;
+}
+
+.footer-section .links-wrap {
+    margin-top: 0px;
+}
+
+.footer-section .links-wrap ul li {
+    margin-bottom: 10px;
+}
+
+.footer-section a {
+    text-decoration: none;
+    color: #2f2f2f;
+    transition: .3s all ease;
+}
+
+.before-footer-section {
+    padding: 7rem 0 12rem 0 !important;
+}
+
+.product-section .product-item {
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    position: relative;
+    padding-bottom: 50px;
+    cursor: pointer;
+}
+
+.why-choose-section {
+    padding: 7rem 0;
+}
+
+.feature {
+    margin-bottom: 30px;
+}
+
+.feature .icon {
+    display: inline-block;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.feature h3 {
+    font-size: 14px;
+    color: #2f2f2f;
+}
+
+.feature p {
+    font-size: 14px;
+    line-height: 22px;
+    color: #6a6a6a;
+}
+.why-choose-section .img-wrap {
+    position: relative;
+}
+
+.untree_co-section {
+    padding: 7rem 0;
+    margin-bottom: 4rem ;
+}
+
+.links-s{
+    color: #2f2f2f;
+}
+
+.blog-section .post-entry .post-thumbnail {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.blog-section .post-entry a {
+    text-decoration: none;
+}
+
+.blog-section .post-entry .post-content-entry {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.service {
+    line-height: 1.5;
+}
+
+.service .service-icon {
+    border-radius: 10px;
+    flex: 0 0 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    background: #3b5d50;
+    margin-right: 20px;
+    color: #ffffff;
+}
+
+.form-control-section {
+    height: 50px;
+    border-radius: 10px;
+    font-family: "Inter", sans-serif;
+}
+
+.btn-section:hover{
+    color: white;
+}
+
+textarea{
+    resize: none;
 }
